web_src/css/markup/codecopy.css
.markup .code-wrapper,
.markup .mermaid-block {
  position: relative;
}

.code-wrapper {
  background-color: var(--color-markup-code-block);
  border-radius: var(--border-radius);
}

.code-block {
  margin-right: 56px;
}

.markup .code-copy {
  position: absolute;
  top: 8px;
  right: 6px;
  padding: 9px;
  /*visibility: hidden;*/
  animation: fadeout 0.2s both;
}

/* adjustments for comment content having only 14px font size */
.repository.view.issue .comment-list .comment .markup .code-copy {
  right: 5px;
  padding: 8px;
}

/* can not use regular transparent button colors for hover and active states because
   we need opaque colors here as code can appear behind the button */
.markup .code-copy:hover {
  background: var(--color-secondary) !important;
}

.markup .code-copy:active {
  background: var(--color-secondary-dark-1) !important;
}

.markup .code-wrapper:hover .code-copy,
.markup .mermaid-block:hover .code-copy {
  visibility: visible;
  animation: fadein 0.2s both;
}

